--- a/css/main-no-js.css
+++ b/css/main-no-js.css
@@ -27,7 +27,7 @@ h2 {
 }
 
 #content p, #content li {
-  font-family: 'minion-pro', Georgia, serif;
+  font-family: Georgia, serif;
   font-size: 18px;
   line-height: 1.5;
 }
